[package]
name = "pallet-rewards"
version = "2.3.0"
authors = ["Wei Tang <wei@that.world>"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
sp-runtime = { path = "../../vendor/substrate/primitives/runtime", default-features = false }
sp-std = { path = "../../vendor/substrate/primitives/std", default-features = false }
sp-inherents = { path = "../../vendor/substrate/primitives/inherents", default-features = false }
sp-consensus-pow = { path = "../../vendor/substrate/primitives/consensus/pow", default-features = false }
frame-support = { path = "../../vendor/substrate/frame/support", default-features = false }
frame-system = { path = "../../vendor/substrate/frame/system", default-features = false }

# Benchmarking
frame-benchmarking = { path = "../../vendor/substrate/frame/benchmarking", default-features = false, optional = true }

[dev-dependencies]
sp-core = { path = "../../vendor/substrate/primitives/core", default-features = false }
sp-io = { path = "../../vendor/substrate/primitives/io", default-features = false }
pallet-balances = { path = "../../vendor/substrate/frame/balances", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-inherents/std",
	"sp-consensus-pow/std",
	"frame-support/std",
	"frame-system/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
]
