[package]
name = "pallet-variables"
version = "2.4.0"
authors = ["Wei Tang <wei@that.world>"]
license = "GPL-3.0-or-later"
edition = "2018"
description = "Variable storage to reduce the need of runtime upgrades."

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-core/std",
	"sp-std/std",
	"frame-system/std",
	"frame-support/std",
]
