[package]
name = "kulupu-pow-consensus"
version = "0.10.0-dev"
authors = ["Parity Technologies <admin@parity.io>", "Wei Tang <wei@that.world>"]
description = "PoW consensus for Kulupu"
edition = "2018"
license = "GPL-3.0-or-later"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"] }
sp-core = { git = "https://github.com/paritytech/substrate" }
sp-blockchain = { git = "https://github.com/paritytech/substrate" }
sp-runtime = { git = "https://github.com/paritytech/substrate" }
sp-api = { git = "https://github.com/paritytech/substrate" }
sc-client-api = { git = "https://github.com/paritytech/substrate" }
sp-block-builder = { git = "https://github.com/paritytech/substrate" }
sp-inherents = { git = "https://github.com/paritytech/substrate" }
sp-consensus-pow = { git = "https://github.com/paritytech/substrate" }
sp-consensus = { git = "https://github.com/paritytech/substrate" }
sc-consensus = { git = "https://github.com/paritytech/substrate" }
log = "0.4.8"
futures = "0.3.16"
futures-timer = "3.0.1"
parking_lot = "0.11.1"
derive_more = "0.99.2"
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", version = "0.9.0"}
async-trait = "0.1.50"
