[package]
name = "kulupu-randomx"
description = "Proof-of-work (PoW) algorithm that is optimized for general-purpose CPUs"
license = "BSD-3-Clause"
version = "2.0.0"
authors = ["Wei Tang <wei@that.world>"]
edition = "2018"

[dependencies]
sys = { package = "kulupu-randomx-sys", path = "sys" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "fullvm"
harness = false
